# postgres

./: .git-blame-ignore-revs  configure  configure.ac  meson.build
contrib/: Makefile  meson.build
contrib/amcheck/: verify_gin.c  verify_heapam.c
contrib/btree_gist/: btree_bit.c  btree_bool.c  btree_bytea.c  btree_cash.c  btree_date.c  btree_enum.c  btree_float4.c  btree_float8.c  btree_inet.c  btree_int2.c  btree_int4.c  btree_int8.c  btree_interval.c  btree_macaddr.c  btree_macaddr8.c  btree_numeric.c  btree_oid.c  btree_text.c  btree_time.c  btree_ts.c  btree_utils_num.c  btree_utils_num.h  btree_utils_var.c  btree_utils_var.h  btree_uuid.c
contrib/dblink/: .gitignore  Makefile  dblink.c  meson.build
contrib/dblink/expected/: rewrite_stale_xmin.out
contrib/dblink/specs/: rewrite_stale_xmin.spec
contrib/dict_xsyn/: dict_xsyn.c
contrib/file_fdw/: file_fdw.c
contrib/hstore/expected/: hstore.out
contrib/hstore/sql/: hstore.sql
contrib/ltree/expected/: ltree.out
contrib/ltree/sql/: ltree.sql
contrib/pageinspect/: brinfuncs.c  btreefuncs.c  fsmfuncs.c  ginfuncs.c  gistfuncs.c  hashfuncs.c  heapfuncs.c  rawpage.c
contrib/pg_archivecleanup/: pg_archivecleanup.c
contrib/pg_logicalinspect/: pg_logicalinspect.c
contrib/pg_overexplain/: pg_overexplain.c
contrib/pg_overexplain/expected/: pg_overexplain.out
contrib/pg_overexplain/sql/: pg_overexplain.sql
contrib/pg_plan_advice/: Makefile  meson.build  pg_plan_advice.c  pgpa_identifier.c  pgpa_join.c  pgpa_output.c  pgpa_scan.c  pgpa_walker.c
contrib/pg_plan_advice/t/: 001_foreign_scan.pl
contrib/pg_standby/: pg_standby.c
contrib/pg_stash_advice/: pg_stash_advice.c
contrib/pg_stat_statements/: Makefile  meson.build  pg_stat_statements.c
contrib/pg_stat_statements/expected/: level_tracking.out  normalize.out  plancache.out  select.out  squashing.out  utility.out
contrib/pg_stat_statements/sql/: extended.sql  level_tracking.sql  normalize.sql  plancache.sql  select.sql  squashing.sql  utility.sql
contrib/pg_trgm/: trgm_gist.c
contrib/pg_walinspect/: pg_walinspect.c
contrib/pgcrypto/: Makefile  meson.build  pgp.c
contrib/pgcrypto/expected/: pgp-fips-cipher.out  pgp-fips-cipher_1.out
contrib/pgcrypto/sql/: pgp-fips-cipher.sql
contrib/pgstattuple/: pgstatapprox.c  pgstatindex.c
contrib/postgres_fdw/: Makefile  postgres_fdw.c
contrib/postgres_fdw/expected/: eval_plan_qual.out  postgres_fdw.out
contrib/postgres_fdw/sql/: postgres_fdw.sql
contrib/snowflake/: Makefile  meson.build  snowflake--1.0.sql  snowflake.c  snowflake.control
contrib/snowflake/expected/: snowflake.out
contrib/snowflake/sql/: snowflake.sql
contrib/spi/: Makefile  meson.build
contrib/xml2/: xpath.c  xslt_proc.c
doc/src/sgml/: appendix-obsolete-refint.sgml  appendix-obsolete.sgml  backup.sgml  catalogs.sgml  config.sgml  contrib-spi.sgml  contrib.sgml  datatype.sgml  ddl.sgml  fdwhandler.sgml  filelist.sgml  func.sgml  high-availability.sgml  install-windows.sgml  installation.sgml  libpq.sgml  logical-replication.sgml  maintenance.sgml  monitoring.sgml  pgarchivecleanup.sgml  pgcrypto.sgml  pgstandby.sgml  pgstatstatements.sgml  postgres.sgml  queries.sgml  recovery-config.sgml  regress.sgml  release-9.1.sgml  release.sgml  rules.sgml  runtime.sgml  sequenceam.sgml  snowflake.sgml  storage.sgml  xfunc.sgml
src/: Makefile  meson.build
src/backend/: Makefile
src/backend/access/: Makefile  meson.build
src/backend/backup/: walsummary.c
src/backend/bootstrap/: bootstrap.c
src/backend/catalog/: heap.c  index.c  information_schema.sql  namespace.c  objectaddress.c  pg_depend.c  pg_proc.c  sql_features.txt  storage.c  system_views.sql  toasting.c
src/backend/commands/: amcmds.c  async.c  cluster.c  copy.c  copyfrom.c  copyfromparse.c  copyto.c  createas.c  explain.c  extension.c  foreigncmds.c  meson.build  propgraphcmds.c  view.c  (+6 more)
src/common/: hmac.c  hmac_openssl.c  unicode_case.c  unicode_norm.c
src/fe_utils/: cancel.c  print.c  version.c
src/include/: c.h  fmgr.h  pg_config.h.in  pgstat.h  postgres.h  postgres_ext.h  varatt.h
src/makefiles/: pgxs.mk
src/port/: path.c  pg_localeconv_r.c  win32error.c  win32ntdll.c
src/test/modules/dummy_sequence_am/: Makefile  dummy_sequence_am--1.0.sql  dummy_sequence_am.c  dummy_sequence_am.control  meson.build
src/test/modules/dummy_sequence_am/expected/: dummy_sequence.out
src/test/modules/dummy_sequence_am/sql/: dummy_sequence.sql
src/timezone/: zic.c
src/tools/: testwrap
src/tools/pgindent/: .gitignore  Makefile  README  args.c  discover.c  err.c  err.h  exclude_file_patterns  filter.c  indent.h  indent_core.c  indent_globs.h  io.c  lexi.c  main.c  meson.build  parse.c  pgindent.h  pgindent.man  postprocess.c  pr_comment.c  preprocess.c  typedefs.c  typedefs.list
src/tools/pgindent/t/: 001_pgindent.pl
src/tools/pgindent/tests/: binary.0.stdout  comments.0.stdout  cppelsecom.0.stdout  declarations.0.stdout  elsecomment.0.stdout  enum.0.stdout  f_decls.0.stdout  float.0.stdout  label.0.stdout  list_head.0.stdout  offsetof.0.stdout  parens.0.stdout  sac.0.stdout  struct.0.stdout  surplusbad.0.stdout  wchar.0.stdout
(+565 files in other folders)
